--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="jfinal-plugin-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jfinal-plugin/jfinal-plugin">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="jfinal-demo"/>
         <property name="java-output-path" value="/jfinal-demo/target/classes"/>
     </wb-module>
