--- a/src/main/webapp/static/lib/easyui/themes/material/easyui.css
+++ b/src/main/webapp/static/lib/easyui/themes/material/easyui.css
@@ -2924,3 +2924,7 @@
 .datagrid-footer td {
   border-style: solid;
 }
+/*add by hadong*/
+.icon-user {
+  background: url('images/user.png') no-repeat center center;
+}
