--- a/src/main/webapp/static/css/config.css
+++ b/src/main/webapp/static/css/config.css
@@ -17,7 +17,15 @@ body {
 	text-align: center;
 	padding-top: 10%;
 }
-
+#nav_bar{
+border-bottom: 1px solid #ddd;
+}
+#menu_accordion{
+	border-right: 1px solid #ddd;
+}
+#status_bar{
+	border-top: 1px solid #ddd;
+}
 #_menu_accordion .menu-item {
 	border-bottom: 1px solid #dedede;
 	border-top: 1px solid #fff;
