--- a/src/main/webapp/static/css/qa.css
+++ b/src/main/webapp/static/css/qa.css
@@ -103,7 +103,7 @@ body, html {
     position: relative;
     padding: 0.5rem;
     max-width: 80%;
-    word-break: break-all;
+    word-break: break-word;
     word-wrap: break-word;
 }
 .aui-chat .aui-chat-content img {
@@ -182,6 +182,7 @@ body, html {
     overflow-x: hidden;
     border: none;
     width: 100%;
+    font-size: 0.7rem;
 }
 .aui-chat-tool .sendBtn {
     line-height: 1.4rem;
