--- a/src/main/webapp/static/css/qa.css
+++ b/src/main/webapp/static/css/qa.css
@@ -1,193 +1,244 @@
 body, html {
-    height: 100%;
-    -webkit-tap-highlight-color: transparent;
-    font-family: "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", tahoma, arial, simsun, "宋体";
+	height: 100%;
+	-webkit-tap-highlight-color: transparent;
+	font-family: "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", tahoma,
+		arial, simsun, "宋体";
 }
+
 .weui_navbar+.weui_tab_bd {
-    padding: 50px 5px 60px 5px;
-    background-color: #f5f5f5;
+	padding: 50px 5px 60px 5px;
+	background-color: #f5f5f5;
 }
+
 .weui-photo-browser-modal {
-    z-index: 999;
+	z-index: 999;
 }
+
 .weui_navbar {
-    line-height: 2rem;
-    height: 2rem;
-    background-color: #6ABD78;
-    color: #fff;
+	line-height: 2rem;
+	height: 2rem;
+	background-color: #6ABD78;
+	color: #fff;
 }
+
 .weui-photo-browser-modal .photo-container img {
-    margin: 0 auto;
+	margin: 0 auto;
 }
+
 .weui_tabbar:before {
-    border-top: 1px solid #ccc;
+	border-top: 1px solid #ccc;
 }
+
 .navbar_left {
-    flex: 1;
+	flex: 1;
 }
+
 .navbar_center {
-    flex: 3;
-    text-align: center;
+	flex: 3;
+	text-align: center;
 }
+
 .navbar_right {
-    flex: 1;
+	flex: 1;
 }
 
 /*chat*/
 .aui-chat {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
+
 .aui-chat .aui-chat-item {
-    position: relative;
-    width: 100%;
-    margin-bottom: 0.75rem;
-    overflow: hidden;
-    display: block;
+	position: relative;
+	width: 100%;
+	margin-bottom: 0.75rem;
+	overflow: hidden;
+	display: block;
 }
+
 .aui-chat .aui-chat-header {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 0.75rem;
-    font-size: 0.6rem;
-    color: #757575;
+	width: 100%;
+	text-align: center;
+	margin-bottom: 0.75rem;
+	font-size: 0.6rem;
+	color: #757575;
 }
+
 .aui-chat .aui-chat-left {
-    float: left;
+	float: left;
 }
+
 .aui-chat .aui-chat-right {
-    float: right;
+	float: right;
 }
+
 .aui-chat .aui-chat-media {
-    display: inline-block;
-    max-width: 2rem;
+	display: inline-block;
+	max-width: 2rem;
 }
+
 .aui-chat .aui-chat-media img {
-    width: 100%;
-    border-radius: 50%;
+	width: 100%;
+	border-radius: 50%;
 }
+
 .aui-chat .aui-chat-inner {
-    position: relative;
-    overflow: hidden;
-    display: inherit;
+	position: relative;
+	overflow: hidden;
+	display: inherit;
 }
+
 .aui-chat .aui-chat-arrow {
-    content: '';
-    position: absolute;
-    width: 0.6rem;
-    height: 0.6rem;
-    top: 0.2rem;
-    -webkit-transform-origin: 50% 50% 0;
-    transform-origin: 50% 50% 0;
-    background-color: transparent;
+	content: '';
+	position: absolute;
+	width: 0.6rem;
+	height: 0.6rem;
+	top: 0.2rem;
+	-webkit-transform-origin: 50% 50% 0;
+	transform-origin: 50% 50% 0;
+	background-color: transparent;
 }
+
 .aui-chat .aui-chat-left .aui-chat-arrow {
-    background-image: -webkit-linear-gradient(45deg, #CCE6DE, #CCE6DE 50%, transparent 50%);
-    background-image: linear-gradient(45deg, #CCE6DE, #CCE6DE 50%, transparent 50%);
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-    left: -0.25rem;
+	background-image: -webkit-linear-gradient(45deg, #CCE6DE, #CCE6DE 50%, transparent 50%);
+	background-image: linear-gradient(45deg, #CCE6DE, #CCE6DE 50%, transparent 50%);
+	-webkit-transform: rotate(45deg);
+	transform: rotate(45deg);
+	left: -0.25rem;
 }
+
 .aui-chat .aui-chat-right .aui-chat-arrow {
-    background-image: -webkit-linear-gradient(45deg, #ffffff, #ffffff 50%, transparent 50%);
-    background-image: linear-gradient(45deg, #ffffff, #ffffff 50%, transparent 50%);
-    -webkit-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-    right: -0.25rem;
+	background-image: -webkit-linear-gradient(45deg, #ffffff, #ffffff 50%, transparent 50%);
+	background-image: linear-gradient(45deg, #ffffff, #ffffff 50%, transparent 50%);
+	-webkit-transform: rotate(-135deg);
+	transform: rotate(-135deg);
+	right: -0.25rem;
 }
+
 .aui-chat .aui-chat-content {
-    color: #212121;
-    font-size: 0.7rem;
-    border-radius: 0.2rem;
-    min-height: 1rem;
-    position: relative;
-    padding: 0.5rem;
-    max-width: 80%;
-    word-break: break-word;
-    word-wrap: break-word;
+	color: #212121;
+	font-size: 0.7rem;
+	border-radius: 0.2rem;
+	min-height: 1rem;
+	position: relative;
+	padding: 0.5rem;
+	max-width: 80%;
+	word-break: break-word;
+	word-wrap: break-word;
 }
+
 .aui-chat .aui-chat-content img {
-    max-width: 100%;
-    display: block;
+	max-width: 100%;
+	display: block;
 }
+
 .aui-chat .aui-chat-status {
-    position: relative;
-    width: 2rem;
-    height: 2rem;
-    line-height: 2rem;
-    text-align: center;
+	position: relative;
+	width: 2rem;
+	height: 2rem;
+	line-height: 2rem;
+	text-align: center;
 }
+
 .aui-chat .aui-chat-name {
-    width: 100%;
-    position: relative;
-    font-size: 0.6rem;
-    color: #757575;
-    margin-bottom: 0.25rem;
+	width: 100%;
+	position: relative;
+	font-size: 0.6rem;
+	color: #757575;
+	margin-bottom: 0.25rem;
 }
+
 .aui-chat .aui-chat-left .aui-chat-name {
-    left: 0.5rem;
+	left: 0.5rem;
 }
+
 .aui-chat .aui-chat-left .aui-chat-status {
-    left: 0.5rem;
-    float: left;
+	left: 0.5rem;
+	float: left;
 }
+
 .aui-chat .aui-chat-left .aui-chat-media {
-    width: 2rem;
-    float: left;
+	width: 2rem;
+	float: left;
 }
+
 .aui-chat .aui-chat-left .aui-chat-inner {
-    max-width: 70%;
+	max-width: 70%;
 }
+
 .aui-chat .aui-chat-left .aui-chat-content {
-    background-color: #CCE6DE;
-    float: left;
-    left: 0.5rem;
+	background-color: #CCE6DE;
+	float: left;
+	left: 0.5rem;
 }
+
 .aui-chat .aui-chat-right .aui-chat-media {
-    width: 2rem;
-    float: right;
+	width: 2rem;
+	float: right;
 }
+
 .aui-chat .aui-chat-right .aui-chat-inner {
-    float: right;
-    max-width: 70%;
+	float: right;
+	max-width: 70%;
 }
+
 .aui-chat .aui-chat-right .aui-chat-name {
-    float: right;
-    right: 0.5rem;
-    text-align: right;
+	float: right;
+	right: 0.5rem;
+	text-align: right;
 }
+
 .aui-chat .aui-chat-right .aui-chat-content {
-    background-color: #ffffff;
-    right: 0.5rem;
-    float: right;
+	background-color: #ffffff;
+	right: 0.5rem;
+	float: right;
 }
+
 .aui-chat .aui-chat-right .aui-chat-status {
-    float: right;
-    right: 0.5rem;
+	float: right;
+	right: 0.5rem;
 }
+
 .aui-chat-tool {
-    min-height: 2rem;
+	min-height: 2rem;
 }
+
 .aui-chat-tool .eaitWrap {
-    position: absolute;
-    right: 4rem;
-    left: 0;
+	position: absolute;
+	right: 4rem;
+	left: 0;
 }
+
 .aui-chat-tool .editArea {
-    line-height: 1.4rem;
-    height: 1.4rem;
-    margin: 0.25rem;
-    padding: 0 0.25rem;
-    overflow-y: auto;
-    overflow-x: hidden;
-    border: none;
-    width: 100%;
-    font-size: 0.7rem;
+	line-height: 1.4rem;
+	height: 1.4rem;
+	margin: 0.25rem;
+	padding: 0 0.25rem;
+	overflow-y: auto;
+	overflow-x: hidden;
+	border: none;
+	width: 100%;
+	font-size: 0.7rem;
 }
+
 .aui-chat-tool .sendBtn {
-    line-height: 1.4rem;
-    height: 1.4rem;
-    margin: 0.25rem;
-    position: absolute;
-    right: 0px;
+	line-height: 1.4rem;
+	height: 1.4rem;
+	margin: 0.25rem;
+	position: absolute;
+	right: 0px;
+}
+
+.aui-chat .chat-frame {
+	width: 100%;
+	min-height: 12rem;
+	border: 1px solid #ededed;
+	border-radius: 4px;
+	background: #fff;
+	margin-bottom: 2rem;
+}
+
+.aui-chat .chat-choose {
+	width: 100%;
+	margin-bottom: 2rem;
 }
