--- a/src/main/webapp/static/css/config.css
+++ b/src/main/webapp/static/css/config.css
@@ -20,8 +20,21 @@ body {
 
 #nav_bar {
 	border-bottom: 1px solid #ddd;
+	color:#777;
+	background-color: #F2F2F2;
+    background: -webkit-linear-gradient(top,#ffffff 0,#F2F2F2 100%);
+    background: -moz-linear-gradient(top,#ffffff 0,#F2F2F2 100%);
+    background: -o-linear-gradient(top,#ffffff 0,#F2F2F2 100%);
+    background: linear-gradient(to bottom,#ffffff 0,#F2F2F2 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffff,endColorstr=#F2F2F2,GradientType=0);
 }
-
+#nav_bar .l-btn{
+	color:#777;
+}
+#nav_bar .l-btn-plain:hover,#nav_bar .l-btn:hover{
+	background: transparent;
+}
 #menu_accordion {
 	border-right: 1px solid #ddd;
 }
