--- a/src/main/webapp/static/css/config.css
+++ b/src/main/webapp/static/css/config.css
@@ -2,6 +2,11 @@ body {
 	font: 12px/1.5 "Microsoft Yahei", "微软雅黑", verdana;
 }
 
+a:focus {
+	outline: none;
+	blr: expression(this.onFocus = this.blur ());
+}
+
 .fa {
 	padding: 2px;
 }
@@ -18,23 +23,28 @@ body {
 	padding-top: 10%;
 }
 
+.danger-hover:hover{
+	color:#cc0000;
+}
+.safe-hover:hover{
+	color:#339933;
+}
+.warning-hover:hover{
+	color:#ff7f00;
+}
+
 #nav_bar {
 	border-bottom: 1px solid #ddd;
-	color:#777;
 	background-color: #F2F2F2;
-    background: -webkit-linear-gradient(top,#ffffff 0,#F2F2F2 100%);
-    background: -moz-linear-gradient(top,#ffffff 0,#F2F2F2 100%);
-    background: -o-linear-gradient(top,#ffffff 0,#F2F2F2 100%);
-    background: linear-gradient(to bottom,#ffffff 0,#F2F2F2 100%);
-    background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffff,endColorstr=#F2F2F2,GradientType=0);
+	background: -webkit-linear-gradient(top, #ffffff 0, #F2F2F2 100%);
+	background: -moz-linear-gradient(top, #ffffff 0, #F2F2F2 100%);
+	background: -o-linear-gradient(top, #ffffff 0, #F2F2F2 100%);
+	background: linear-gradient(to bottom, #ffffff 0, #F2F2F2 100%);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffff,
+		endColorstr=#F2F2F2, GradientType=0);
 }
-#nav_bar .l-btn{
-	color:#777;
-}
-#nav_bar .l-btn-plain:hover,#nav_bar .l-btn:hover{
-	background: transparent;
-}
+
 #menu_accordion {
 	border-right: 1px solid #ddd;
 }
