--- a/src/main/webapp/static/css/config.css
+++ b/src/main/webapp/static/css/config.css
@@ -60,3 +60,15 @@ a:focus {
 #status_bar {
 	background-color: #f5f5f5;
 }
+
+.pd-10{
+	padding:10px;
+}
+.mg-top-10{
+	margin-top:10px;
+	display: block
+}
+.mg-bottom-5{
+	margin-bottom:5px;
+	display: block
+}
