--- a/src/main/webapp/static/css/config.css
+++ b/src/main/webapp/static/css/config.css
@@ -23,14 +23,16 @@ a:focus {
 	padding-top: 10%;
 }
 
-.danger-hover:hover{
-	color:#cc0000;
+.danger-hover:hover {
+	color: #cc0000;
 }
-.safe-hover:hover{
-	color:#339933;
+
+.safe-hover:hover {
+	color: #339933;
 }
-.warning-hover:hover{
-	color:#ff7f00;
+
+.warning-hover:hover {
+	color: #ff7f00;
 }
 
 #nav_bar {
@@ -61,14 +63,32 @@ a:focus {
 	background-color: #f5f5f5;
 }
 
-.pd-10{
-	padding:10px;
+.pd-10 {
+	padding: 10px;
 }
-.mg-top-10{
-	margin-top:10px;
+
+.pd-left-10 {
+	padding-left: 10px;
+}
+
+.mg-top-10 {
+	margin-top: 10px;
 	display: block
 }
-.mg-bottom-5{
-	margin-bottom:5px;
+
+.mg-bottom-5 {
+	margin-bottom: 5px;
 	display: block
+}
+
+.float-left {
+	float: left;
+}
+
+.float-right {
+	float: right;
+}
+
+.float-clear {
+	clear: both;
 }
