--- a/src/main/webapp/static/lib/easyui/themes/default/easyui.css
+++ b/src/main/webapp/static/lib/easyui/themes/default/easyui.css
@@ -2614,7 +2614,7 @@
   width: 70px;
 }
 .messager-icon {
-  float: left;
+  float: right;
   width: 32px;
   height: 32px;
   margin: 0 10px 10px 0;
